add linkedin link

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 <p class="lead mb-5">Aujourd’hui ma passion pour le développement web me permet de développer en Front et en Back. Ma motivation personnelle et mon enthousiasme me permettent de découvrir des nouvelles technologies et de l’adapter à une structure complexe
                     déjà existante. Mon envie d’apprendre et de suivre l’évolution des technologies web me permet de me confronter aux différents contextes de développement. Chaque contrainte de développement devient un challenge et me donne la possibilité
                     de me dépasser et de me réaliser professionnellement.</p>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/vincent-de-moor/">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
             </div>
         </section>
 
